{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 37,
  "lineage": "f84b4666-441b-6ded-84c4-f7badcda594f",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "azfw_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_learn_private_ranges_enabled": false,
            "base_policy_id": "",
            "child_policies": [],
            "dns": [],
            "explicit_proxy": [],
            "firewalls": [],
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/firewallPolicies/example-fwpolicy",
            "identity": [],
            "insights": [],
            "intrusion_detection": [],
            "location": "eastus",
            "name": "example-fwpolicy",
            "private_ip_ranges": null,
            "resource_group_name": "rg1",
            "rule_collection_groups": [],
            "sku": "Standard",
            "sql_redirect_allowed": null,
            "tags": null,
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [
              {
                "action": "Deny",
                "name": "app_rule_collection1",
                "priority": 500,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": null,
                    "destination_fqdn_tags": null,
                    "destination_fqdns": [
                      "*.microsoft.com"
                    ],
                    "destination_urls": null,
                    "http_headers": [],
                    "name": "app_rule_collection1_rule1",
                    "protocols": [
                      {
                        "port": 80,
                        "type": "Http"
                      },
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.0.1.64/26"
                    ],
                    "source_ip_groups": null,
                    "terminate_tls": false,
                    "web_categories": null
                  }
                ]
              }
            ],
            "firewall_policy_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/firewallPolicies/example-fwpolicy",
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/firewallPolicies/example-fwpolicy/ruleCollectionGroups/example-fwpolicy-rcg",
            "name": "example-fwpolicy-rcg",
            "nat_rule_collection": [
              {
                "action": "Dnat",
                "name": "nat_rule_collection1",
                "priority": 300,
                "rule": [
                  {
                    "description": "",
                    "destination_address": "172.191.35.233",
                    "destination_ports": [
                      "80"
                    ],
                    "name": "nat_rule_collection1_rule1",
                    "protocols": [
                      "TCP",
                      "UDP"
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": null,
                    "translated_address": "10.0.1.4",
                    "translated_fqdn": "",
                    "translated_port": 80
                  }
                ]
              }
            ],
            "network_rule_collection": [],
            "priority": 500,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall_policy.azfw_policy",
            "azurerm_lb.web",
            "azurerm_public_ip.pip_azfw",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.my_terraform_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/app-lb/frontendIPConfigurations/app-lb-frontend",
                "name": "app-lb-frontend",
                "private_ip_address": "10.0.1.68",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/vnet-test/subnets/subnet-app"
              }
            ],
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/app-lb",
            "location": "eastus",
            "name": "app-lb",
            "private_ip_address": "10.0.1.68",
            "private_ip_addresses": [
              "10.0.1.68"
            ],
            "resource_group_name": "rg1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.app_subnet",
            "azurerm_virtual_network.my_terraform_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/web-lb/frontendIPConfigurations/LBPublicIPAddress",
                "name": "LBPublicIPAddress",
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/vnet-test/subnets/subnet-web"
              }
            ],
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/web-lb",
            "location": "eastus",
            "name": "web-lb",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.my_terraform_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "app-pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/app-lb/backendAddressPools/app-lb-backend-pool",
            "loadbalancer_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/app-lb",
            "name": "app-lb-backend-pool"
          },
          "dependencies": [
            "azurerm_lb.app",
            "azurerm_resource_group.rg",
            "azurerm_subnet.app_subnet",
            "azurerm_virtual_network.my_terraform_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web-pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/web-lb/backendAddressPools/web-lb-backend-pool",
            "loadbalancer_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/web-lb",
            "name": "web-lb-backend-pool"
          },
          "dependencies": [
            "azurerm_lb.web",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.my_terraform_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "app-probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/app-lb/probes/app-lb-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/app-lb",
            "name": "app-lb-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.app",
            "azurerm_resource_group.rg",
            "azurerm_subnet.app_subnet",
            "azurerm_virtual_network.my_terraform_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "web-probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/web-lb/probes/web-lb-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/web-lb",
            "name": "web-lb-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.my_terraform_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "app-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/app-lb/backendAddressPools/app-lb-backend-pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": true,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/app-lb/frontendIPConfigurations/app-lb-frontend",
            "frontend_ip_configuration_name": "app-lb-frontend",
            "frontend_port": 80,
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/app-lb/loadBalancingRules/app-lb-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/app-lb",
            "name": "app-lb-rule",
            "probe_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/app-lb/probes/app-lb-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.app",
            "azurerm_lb_backend_address_pool.app-pool",
            "azurerm_lb_probe.app-probe",
            "azurerm_resource_group.rg",
            "azurerm_subnet.app_subnet",
            "azurerm_virtual_network.my_terraform_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/web-lb/backendAddressPools/web-lb-backend-pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": true,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/web-lb/frontendIPConfigurations/LBPublicIPAddress",
            "frontend_ip_configuration_name": "LBPublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/web-lb/loadBalancingRules/web-lb-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/web-lb",
            "name": "web-lb-rule",
            "probe_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/web-lb/probes/web-lb-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web",
            "azurerm_lb_backend_address_pool.web-pool",
            "azurerm_lb_probe.web-probe",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.my_terraform_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/networkInterfaces/nic-app-1",
            "internal_domain_name_suffix": "dfgxwlcy1znulajxfvzwwdmxmb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.70",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/vnet-test/subnets/subnet-app"
              }
            ],
            "location": "eastus",
            "name": "nic-app-1",
            "private_ip_address": "10.0.1.70",
            "private_ip_addresses": [
              "10.0.1.70"
            ],
            "resource_group_name": "rg1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.app_subnet",
            "azurerm_virtual_network.my_terraform_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/networkInterfaces/nic-app-2",
            "internal_domain_name_suffix": "dfgxwlcy1znulajxfvzwwdmxmb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.69",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/vnet-test/subnets/subnet-app"
              }
            ],
            "location": "eastus",
            "name": "nic-app-2",
            "private_ip_address": "10.0.1.69",
            "private_ip_addresses": [
              "10.0.1.69"
            ],
            "resource_group_name": "rg1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.app_subnet",
            "azurerm_virtual_network.my_terraform_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web-vm-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/networkInterfaces/nic-web-1",
            "internal_domain_name_suffix": "dfgxwlcy1znulajxfvzwwdmxmb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig-web-1",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/publicIPAddresses/web-vm-PublicIP",
                "subnet_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/vnet-test/subnets/subnet-web"
              }
            ],
            "location": "eastus",
            "name": "nic-web-1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "rg1"
          },
          "dependencies": [
            "azurerm_public_ip.my_terraform_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.my_terraform_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/app-lb/backendAddressPools/app-lb-backend-pool",
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/networkInterfaces/nic-app-1/ipConfigurations/ipconfig|/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/app-lb/backendAddressPools/app-lb-backend-pool",
            "ip_configuration_name": "ipconfig",
            "network_interface_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/networkInterfaces/nic-app-1"
          },
          "dependencies": [
            "azurerm_lb.app",
            "azurerm_lb_backend_address_pool.app-pool",
            "azurerm_network_interface.nic",
            "azurerm_resource_group.rg",
            "azurerm_subnet.app_subnet",
            "azurerm_virtual_network.my_terraform_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/app-lb/backendAddressPools/app-lb-backend-pool",
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/networkInterfaces/nic-app-2/ipConfigurations/ipconfig|/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/app-lb/backendAddressPools/app-lb-backend-pool",
            "ip_configuration_name": "ipconfig",
            "network_interface_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/networkInterfaces/nic-app-2"
          },
          "dependencies": [
            "azurerm_lb.app",
            "azurerm_lb_backend_address_pool.app-pool",
            "azurerm_network_interface.nic",
            "azurerm_resource_group.rg",
            "azurerm_subnet.app_subnet",
            "azurerm_virtual_network.my_terraform_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/web-lb/backendAddressPools/web-lb-backend-pool",
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/networkInterfaces/nic-web-1/ipConfigurations/ipconfig-web-1|/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/web-lb/backendAddressPools/web-lb-backend-pool",
            "ip_configuration_name": "ipconfig-web-1",
            "network_interface_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/networkInterfaces/nic-web-1"
          },
          "dependencies": [
            "azurerm_lb.web",
            "azurerm_lb_backend_address_pool.web-pool",
            "azurerm_network_interface.web-vm-nic",
            "azurerm_public_ip.my_terraform_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.my_terraform_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/networkInterfaces/nic-app-1|/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/vm-nsg",
            "network_interface_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/networkInterfaces/nic-app-1",
            "network_security_group_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/vm-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_network_security_group.my_terraform_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.app_subnet",
            "azurerm_virtual_network.my_terraform_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/networkInterfaces/nic-app-2|/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/vm-nsg",
            "network_interface_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/networkInterfaces/nic-app-2",
            "network_security_group_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/vm-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_network_security_group.my_terraform_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.app_subnet",
            "azurerm_virtual_network.my_terraform_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "example1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/networkInterfaces/nic-web-1|/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "network_interface_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/networkInterfaces/nic-web-1",
            "network_security_group_id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/web-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.web-vm-nic",
            "azurerm_network_security_group.web-vm-nsg",
            "azurerm_public_ip.my_terraform_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.my_terraform_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "my_terraform_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/vm-nsg",
            "location": "eastus",
            "name": "vm-nsg",
            "resource_group_name": "rg1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "web",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web-vm-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "location": "eastus",
            "name": "web-nsg",
            "resource_group_name": "rg1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "web",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "my_terraform_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/publicIPAddresses/web-vm-PublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.191.35.207",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "web-vm-PublicIP",
            "resource_group_name": "rg1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip_azfw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/publicIPAddresses/pip-azfw",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.191.35.233",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pip-azfw",
            "resource_group_name": "rg1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "AzureFirewallSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/vnet-test/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg1",
            "virtual_network_name": "vnet-test"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.my_terraform_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.64/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/vnet-test/subnets/subnet-app",
            "name": "subnet-app",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg1",
            "virtual_network_name": "vnet-test"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.my_terraform_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/vnet-test/subnets/subnet-web",
            "name": "subnet-web",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg1",
            "virtual_network_name": "vnet-test"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.my_terraform_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "my_terraform_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2c7b4d19-de58-455b-8137-2d736b0d9761",
            "id": "/subscriptions/2731039a-6e64-4e36-89d2-2b56169c81bc/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/vnet-test",
            "location": "eastus",
            "name": "vnet-test",
            "resource_group_name": "rg1"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}